--- a/Source/CookItNow.Web/app/quick-recipe/assets/css/main.scss
+++ b/Source/CookItNow.Web/app/quick-recipe/assets/css/main.scss
@@ -18,14 +18,13 @@
             padding: 10px;
             width: $quick-recipe-ingredients-side-width;
             margin-bottom: 42px;
-            position: relative;
             position: fixed;
             
             .border-box {
                 background-color: #e9e9e9;
                 border: 1px solid #9e9fa4;
                 padding: 8px;
-                height: calc(100vh - 184px); // Empêche le parallax de fonctionner
+                height: calc(100vh - 184px);
                 overflow-y: auto;
                 
                 .content {
@@ -34,13 +33,23 @@
                         font-family: $font-fancy-decorative;
                     }
                     
+                    .section:after {
+                        content: '';
+                        display: block;
+                        height: 1px;
+                        overflow: hidden;
+                        background-color: #e0e0e0;
+                        width: 80%;
+                        margin: 0 auto;
+                    }
+                    
                     .title {
                         width: 358px;
                         height: 125px;
                         min-height: inherit;
                         background-color: rgba(0, 0, 0, 0.3);
                         border: 1px solid rgb(158, 159, 164);
-                        z-index: 1; // Entre en conflit avec le background transparent
+                        z-index: 1;
                     }
                     
                     .ingredient-list {
@@ -76,11 +85,23 @@
             display: block;
             position: absolute;
         }
+        .ingredients.hidden {
+            left: 0;
+            width: 40px;
+            will-change: width, left;
+            transition: left 0.35s ease-in-out, width 0.35s ease-in-out;
+        }
+        
+        .ingredients.hidden ~.main,
+        .ingredients.hidden ~.main .recipe-content .navbar {
+            width: calc(100% - 40px);
+            will-change: width;
+            transition: left 0.35s ease-in-out, width 0.35s ease-in-out;
+        }
         
         .main {
             color: white;
             width: calc(100% - 396px);
-            // height: calc(100vh - 165px);
             overflow: hidden;
             overflow-y: auto;
             position: relative;
